# FCraft

./: .gitignore  CMakeLists.txt  README.md
src/: BoxGeometry.h  BufferUtils.cpp  ChunkNode.h  ChunkWorld.h  CommandBufferUtils.h  FirstPersonCamera.cpp  FirstPersonCamera.h  Geometry.h  MainMenu.h  main.cpp
src/scripts/: compile_shaders.py
src/vkCraft/: BoxGeometry.cpp  BufferUtils.cpp  BufferUtils.h  Camera.cpp  Chunk.cpp  Chunk.h  ChunkGeometry.cpp  ChunkGeometry.h  ChunkNode.cpp  ChunkNode.h  ChunkWorld.cpp  ChunkWorld.h  CommandBufferUtils.cpp  Device.cpp  FileUtils.cpp  FirstPersonCamera.cpp  FirstPersonCamera.h  Geometry.cpp  Geometry.h  MenuRenderer.h  Object3D.cpp  PlaneGeometry.cpp  QueueFamilyIndices.cpp  QueueFamilyIndices.h  Texture.cpp  Texture.h  ThreadPool.h  Vertex.cpp  Vertex.h  VkCraft.cpp  VkCraft.h  WorldSettings.h  main.cpp
